--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
     <h2 class="section-title">About</h2>
     <div class="card">
       <p>
-        Write a short bio about yourself here. You can mention your background in data science,
-        machine learning, music, or anything you want visitors to know.
+       I am an MSc Data Science student at the Madras School of Economics with a strong interest in machine learning and game theory. 
+        I am also a heavy metal guitarist inspired by technical and progressive death metal.
       </p>
     </div>
   </section>
@@ -186,7 +186,10 @@
   <section id="contact" class="container">
     <h2 class="section-title">Contact</h2>
     <div class="card">
-      <p>Add your email, GitHub, LinkedIn, or other contact details here.</p>
+      <p>Email: 2001swapnil.saha@gmail.com
+        GitHub: https://github.com/swapnilsaha01/ 
+        LinkedIn: https://www.linkedin.com/in/swapnil-saha-183012229/
+        </p>
     </div>
   </section>
 
